# SFML-Minigame

./: CMakeLists.txt  README.md
resources/: world.ldtk
resources/world/simplified/AutoLayer/: IntGrid_layer.csv  data.json
src/: Entity.hpp  Game.cpp  Game.hpp  LdtkJson.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  Tilemap.cpp  Tilemap.hpp  Tileset.cpp  Tileset.hpp  main.cpp
